# cargo-scout

./: .gitignore  .travis.yml  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md
cargo-scout/: Cargo.toml
cargo-scout-lib/: Cargo.toml
cargo-scout-lib/src/: error.rs  lib.rs  utils.rs
cargo-scout-lib/src/config/: mod.rs  rust.rs
cargo-scout-lib/src/healer/: mod.rs
cargo-scout-lib/src/linter/: clippy.rs  mod.rs  rustfmt.rs
cargo-scout-lib/src/scout/: mod.rs
cargo-scout-lib/src/vcs/: git.rs  mod.rs
cargo-scout-lib/test_files/git/mixed/: bar.txt
cargo-scout-lib/test_files/git/modified/new/: bar.rs  foo.rs
cargo-scout-macros/: Cargo.toml
cargo-scout-macros/src/: lib.rs
cargo-scout/src/: main.rs
src/: cargo.rs  clippy.rs  error.rs  git.rs  intersections.rs  lib.rs  main.rs
src/linter/: clippy.rs
src/project/: cargo.rs  mod.rs
src/scout/: mod.rs
test_files/git/: diff_several_extensions_files.patch  diff_several_files.patch  one_diff.patch
test_files/git/modified/old/: bar.rs  foo.rs
