[package]
name = "cargo-scout-lib"
version = "0.6.0"
authors = ["o0Ignition0o <jeremy.lempereur@gmail.com>"]
description = "Lib that powers cargo-scout, and allows you to run / implement your own linters"
homepage = "https://github.com/o0Ignition0o/cargo-scout"
repository = "https://github.com/o0Ignition0o/cargo-scout"
keywords = ["clippy", "lint","pedantic", "cli", "diff"]
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.8.0"
thiserror = "1.0.9"
git2 = { version = "0.11.*", default-features = false }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"

[dev-dependencies]
tempfile = "3.1.0"
